syntax = "proto3";
package wavesenterprise;

option java_multiple_files = true;
option java_package = "com.wavesenterprise.transaction.protobuf.assets";
option csharp_namespace = "WavesEnterprise";
option go_package = "wavesenterprise.com/weproto";

message ReissueTransaction {
  bytes id = 1;
  int32 chain_id = 2;
  bytes sender_public_key = 3;
  bytes asset_id = 4;
  int64 quantity = 5;
  bool reissuable = 6;
  int64 fee = 7;
  int64 timestamp = 8;
  repeated bytes proofs = 9;
  bytes sender_address = 10;
}